--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--specific colors-->
+    <color name="background_card_view">#F5F5F5</color>
+    <color name="accent">#f52c56</color>
+
 </resources>
