--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,43 +6,6 @@
     android:padding="@dimen/size_8"
     android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/size_230"
-        android:backgroundTint="@color/teal_200">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:contentScrim="@color/accent"
-            app:collapsedTitleTextAppearance="?attr/textAppearanceHeadline5"
-            app:collapsedTitleTextColor="@color/white"
-            app:expandedTitleTextColor="@color/white"
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            app:title= "Meal name"
-
-            >
-            <ImageView
-                android:id="@+id/image_meal_detail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/description_image_product"
-                android:scaleType="centerCrop"
-                app:layout_anchor="@+id/appBar"
-                app:layout_anchorGravity="center"
-                app:layout_collapseMode="parallax" />
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"
-                app:layout_collapseMode="pin"/>
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-    </com.google.android.material.appbar.AppBarLayout>
-
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -52,16 +15,42 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imageProduct"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/size_400"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_product"
+                android:layout_width="0dp"
+                android:text="@string/product_name"
+                android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceHeadline5"
+                android:textColor="@color/white"
+                android:shadowColor="@color/black"
+                android:shadowRadius="4"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:layout_marginHorizontal="@dimen/size_16"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/imageProduct"
+                app:layout_constraintEnd_toEndOf="parent"/>
             <TextView
-                android:id="@+id/category_meal"
+                android:id="@+id/category_product"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:text="@string/product_name"
+                android:textSize="@dimen/size_text_24"
+                android:textColor="@color/black"
                 android:drawablePadding="@dimen/size_8"
                 app:drawableStartCompat = "@drawable/ic_category"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/imageProduct" />
 
 
             <TextView
@@ -73,9 +62,9 @@
                 android:layout_marginStart="@dimen/size_10"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="@dimen/size_text_15"
+                android:textSize="@dimen/size_text_20"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/category_meal"/>
+                app:layout_constraintTop_toBottomOf="@id/category_product"/>
 
             <TextView
                 android:id="@+id/tv_description_content"
@@ -87,6 +76,54 @@
                 app:layout_constraintStart_toStartOf="parent"
                 tools:text="here are the instructions to make this recipe"
                 />
+            <TextView
+                android:id="@+id/tv_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/size_text_20"
+                android:layout_margin="@dimen/size_10"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toBottomOf="@id/tv_description_content"
+                app:layout_constraintStart_toStartOf="parent"
+
+                />
+            <TextView
+                android:id="@+id/tv_discount_percentage"
+                android:layout_width="match_parent"
+                android:textSize="@dimen/size_text_20"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/size_10"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toBottomOf="@id/tv_price"
+                app:layout_constraintStart_toStartOf="parent"
+
+                />
+            <TextView
+                android:id="@+id/tv_rating"
+                android:layout_width="match_parent"
+                android:textSize="@dimen/size_text_20"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/size_10"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toBottomOf="@id/tv_discount_percentage"
+                app:layout_constraintStart_toStartOf="parent"
+
+                />
+            <TextView
+                android:id="@+id/tv_stock"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/size_text_20"
+                android:layout_margin="@dimen/size_10"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toBottomOf="@id/tv_rating"
+                app:layout_constraintStart_toStartOf="parent"
+
+                />
+
+
+
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -94,14 +131,5 @@
     </androidx.core.widget.NestedScrollView>
 
 
-    <com.google.android.material.progressindicator.LinearProgressIndicator
-        android:id="@+id/progress_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        app:layout_anchor="@id/appBar"
-        app:layout_anchorGravity="bottom"
-        android:visibility="gone"
-        />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
