--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,19 @@
     tools:context=".presentation.view.MainActivity">
 
     <TextView
+        android:id="@+id/no_results"
+        android:layout_width="wrap_content"
+        android:drawablePadding="@dimen/size_10"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_60"
+        android:textSize="@dimen/size_text_20"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_section_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:drawableStartCompat="@drawable/ic_search_off" />
+
+    <TextView
         android:id="@+id/tv_section_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
