--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="size_20">20dp</dimen>
     <dimen name="size_30">30dp</dimen>
     <dimen name="size_40">40dp</dimen>
+    <dimen name="size_60">60dp</dimen>
     <dimen name="size_150">150dp</dimen>
     <dimen name="size_230">230dp</dimen>
     <dimen name="size_400">400dp</dimen>
